# sermadrid

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: build_and_deploy_to_aws_ecs.yml  deploy-app-infrastructure.yml  deploy-app.yml  deploy-infrastructure.yml  deploy-mage.yml  deploy-ml-infrastructure.yml  deploy.yml  destroy-mage.yml
backend/: backend.dockerfile  pyproject.toml
backend/app/: pyproject.toml
backend/app/app/: __init__.py  celery_app.py  main.py  tasks.py
backend/app/app/api/v1/: router.py
backend/app/app/api/v1/endpoints/: items.py
backend/app/app/core/: celery_app.py  config.py  dependencies.py  prediction.py
backend/app/app/schemas/: input.py  output.py
backend/app/app/worker/v1/: tasks.py
backend/requirements/: requirements-api.txt  requirements-dev.txt
backend/sermadrid/: README.md  pyproject.toml
backend/sermadrid/sermadrid/: logic.py  models.py  pipelines.py
frontend/: entrypoint.sh  frontend.dev.dockerfile  frontend.dockerfile  index.html  package-lock.json  package.json  script.js  vue.config.js
frontend/nginx/: nginx-initial.conf  nginx.conf  nginx.conf.template
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/assets/: neighbourhood_limits.geojson  ser_zone_limit.geojson
frontend/src/components/: BasicLayout.vue  Home.vue
frontend/src/router/: index.js
frontend/src/views/: AboutView.vue  HomeView.vue  NotFoundView.vue
frontendold/: frontend.dockerfile  index.html
frontendold/nginx/: nginx.conf
infrastructure/: backend.tf  backend.tf.template  digital_ocean.tf  locals.tf  variables.tf
infrastructure/backend/: backend.tf.template  digital_ocean.tf
infrastructure/mage/: .terraform.lock.hcl  alb.tf  backend.tf.template  ecr.tf  env_vars.json  main.tf  providers.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
infrastructure/mage-initial/: backend.tf.template
infrastructure/mage-setup/: backend.tf.template  ecr.tf
infrastructure/mage/python/: event_handler.py
infrastructure/zenml/: format.sh
infrastructure/zenml/aws-lambda/: main.tf  outputs.tf  variables.tf
infrastructure/zenml/aws-modular/: aws_account.tf  cert_manager.tf  configure_kubectl.tf  ecr.tf  eks.tf  kubernetes.tf  locals.tf  mlflow.tf  outputs.tf  s3.tf  stack.tf  terraform.tf  variables.tf
infrastructure/zenml/aws-remote-state/: main.tf  variables.tf
infrastructure/zenml/modules/cert-manager-module/: cert_manager.tf  providers.tf
infrastructure/zenml/modules/kubeflow-pipelines-module/: kubeflow.tf  providers.tf
infrastructure/zenml/modules/minio-module/: minio.tf  providers.tf
infrastructure/zenml/modules/mlflow-module/: mlflow.tf  output.tf  providers.tf  variables.tf
infrastructure/zenml/modules/nginx-ingress-module/: dig.sh  (+2 more)
mage/: Dockerfile
mage/mage_data/sermadrid/: mage-ai.db
mage/sermadrid/: metadata.yaml
mage/sermadrid/data_loaders/: load_titanic.py
mage/sermadrid/transformers/: astonishing_arcanist.py  fill_in_missing_values.py
sermadrid/: pyproject.toml
sermadrid/sermadrid/: models.py  pipelines.py
zenml/: .dockerignore  Dockerfile  README.md  lambda_handler.py  pyproject.toml  run.dev.sh  run.py  run_local_server.sh  run_pipelines.sh  zenml.dev.dockerfile  zenml.dockerfile
zenml/.zen/: config.yaml
zenml/infrastructure/aws-modular/: ecr.tf  eks.tf  local.tfvars  locals.tf  s3.tf  terraform.tf  variables.tf
zenml/infrastructure/aws-remote-state/: local.tfvars  outputs.tf  variables.tf
zenml/infrastructure/modules/cert-manager-module/: cert_manager.tf
zenml/pipelines/: __init__.py  feature_engineering.py  inference.py  training.py
zenml/sermadrid/: pyproject.toml
zenml/steps/: data_loader.py  data_preprocessor.py  model_evaluator.py  model_trainer.py
zenml/steps/feature_engineering/: data_aggregator.py  data_loader.py  data_preprocessor.py  data_tuner.py
zenml/steps/training/: model_promoter.py  model_trainer.py
zenml/utils/: config.py  data_loader.py  data_sources.py
(+7 files in other folders)
