[tool.poetry]
name = "sermadrid-backend"
version = "0.1.0"
description = "Backend project to predict the public parking availability in Madrid SER zone."
authors = ["Begoña Echavarren Sanchez <begona.echavarren@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = "0.104.1"
pydantic = "2.4.2"
pydantic-settings = "2.0.3"
pydantic-extra-types = "2.1.0"
uvicorn = "0.23.0"
joblib = "1.4.2"
unidecode = "1.3.8"
pandas = "2.2.2"
prophet = "1.1.5"
workalendar = "17.0.0"
cloudpickle = "^2.2.1" 
sermadrid = { path = "../sermadrid" }
mlflow = ">=2.1.1,<=2.14.2"
boto3 = "^1.34.100"

[tool.poetry.dev-dependencies]
ruff = "0.1.2"
pre-commit = "3.5.0"

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["E501", "B905", "B008"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
