[tool.poetry]
name = "sermadrid-zeml"
version = "0.1.0"
description = "ZenML training pipelines for the sermadrid project."
authors = ["Begoña Echavarren Sanchez <begona.echavarren@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
joblib = "1.4.2"
unidecode = "1.3.8"
pandas = "2.2.2"
prophet = "1.1.5"
workalendar = "17.0.0"
ruff = ">=0.1.7"
zenml = { extras = ["server", "templates"], version = "0.67.0" }
pyarrow = ">=13.0.0"
scikit-learn = "<=1.3"
boto3 = "^1.34.100"
tqdm = "^4.66.4"
sermadrid = { path = "./sermadrid" }
mlflow = ">=2.1.1,<=2.14.2"
mlserver-mlflow = ">=1.3.3"
s3fs = ">2022.3.0"
kubernetes = ">=21.7,<26"
sagemaker = ">=2.117.0"
aws-profile-manager = ">=0.7.0"
python-rapidjson = "<1.15"
pydantic = ">=2.8,<2.9"
mlserver = ">=1.3.3"

[tool.poetry.dev-dependencies]
pre-commit = "3.5.0"

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["E501", "B905", "B008"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
