[tool.poetry]
name = "sermadrid"
version = "0.1.0"
description = "Python package to predict the public parking availability in Madrid SER zone."
authors = ["Begoña Echavarren Sanchez <begona.echavarren@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11"
unidecode = "^1.3.8"
pandas = "^2.2.2"
numpy = "^1.26.4"
joblib = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
