[tool.poetry]
name = "sermadrid"
version = "0.1.11"
description = "Python package to predict the public parking availability in Madrid SER zone."
authors = ["Begoña Echavarren Sanchez <begona.echavarren@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.26.4"
prophet = "^1.1.5"
workalendar = "^17.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
